--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ anyhow = "1"
 arrow-array = "42.0.0"
 arrow-schema = "42.0.0"
 bevy = "0.11.0"
-bevy-inspector-egui = "0.18.3"
+# Uncomment once bevy-inspector-egui moves to bevy 0.11.0, https://github.com/jakobhellermann/bevy-inspector-egui/pull/141
+#bevy-inspector-egui = "0.18.3"
 bevy_common_assets = { version = "0.7", features = ["json"] }
 bytes = "1.4.0"
 cfg-if = "1"
@@ -24,7 +25,7 @@ log = "0.4.17"
 parquet = { version = "42.0.0", default-features = false, features = ["arrow", "arrow-schema", "arrow-array", "snap", "flate2", "brotli"] }
 serde = { version = "1" }
 serde_json = { version = "1", optional = true }
-smooth-bevy-cameras = "0.8.0"
+smooth-bevy-cameras = {  git = "https://github.com/bonsairobo/smooth-bevy-cameras.git", rev = "ed8ba36d3b202bc87bbae963670e1b9419804cd0" }
 thiserror = "1.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
