--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,20 +13,21 @@ opt-level = 3
 
 [dependencies]
 anyhow = "1"
-arrow-array = "29.0.0"
-arrow-schema = "29.0.0"
-bevy = "0.9.1"
-bevy-inspector-egui = "0.15.0"
-bevy_common_assets = { version = "0.4", features = ["json"] }
-bytes = "1.3.0"
+arrow-array = "43.0.0"
+arrow-schema = "43.0.0"
+bevy = "0.11.0"
+bevy_common_assets = { version = "0.7", features = ["json"] }
+# Uncomment once bevy-inspector-egui moves to bevy 0.11.0, https://github.com/jakobhellermann/bevy-inspector-egui/pull/141
+#bevy-inspector-egui = "0.18.3"
+bytes = "1.4.0"
 cfg-if = "1"
-log = "0.4.17"
-parquet = { version = "29.0.0", default-features = false, features = ["arrow", "arrow-schema", "arrow-array", "snap", "flate2", "brotli"] }
+log = "0.4.19"
+parquet = { version = "43.0.0", default-features = false, features = ["arrow", "arrow-schema", "arrow-array", "snap", "flate2", "brotli"] }
 serde = { version = "1" }
 serde_json = { version = "1", optional = true }
-smooth-bevy-cameras = "0.6.0"
+smooth-bevy-cameras = {  git = "https://github.com/bonsairobo/smooth-bevy-cameras.git", rev = "ed8ba36d3b202bc87bbae963670e1b9419804cd0" }
 thiserror = "1.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1"
-console_log = "0.2.0"
+console_log = "1.0.0"
