--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pcd-renderer"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [profile.dev]
@@ -13,19 +13,19 @@ opt-level = 3
 
 [dependencies]
 anyhow = "1"
-arrow-array = "43.0.0"
-arrow-schema = "43.0.0"
-bevy = "0.11.0"
+arrow-array = "46.0.0"
+arrow-schema = "46.0.0"
+bevy = "0.11.2"
 bevy_common_assets = { version = "0.7", features = ["json"] }
 # Uncomment once bevy-inspector-egui moves to bevy 0.11.0, https://github.com/jakobhellermann/bevy-inspector-egui/pull/141
 #bevy-inspector-egui = "0.18.3"
-bytes = "1.4.0"
+bytes = "1.4"
 cfg-if = "1"
-log = "0.4.19"
-parquet = { version = "43.0.0", default-features = false, features = ["arrow", "arrow-schema", "arrow-array", "snap", "flate2", "brotli"] }
+log = "0.4"
+parquet = { version = "46.0.0", default-features = false, features = ["arrow", "arrow-schema", "arrow-array", "snap", "flate2", "brotli"] }
 serde = { version = "1" }
 serde_json = { version = "1", optional = true }
-smooth-bevy-cameras = {  git = "https://github.com/bonsairobo/smooth-bevy-cameras.git", rev = "ed8ba36d3b202bc87bbae963670e1b9419804cd0" }
+smooth-bevy-cameras = { version = "0.9" }
 thiserror = "1.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
