--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
 [package]
 name = "pcd-renderer"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 
 [profile.dev]
 opt-level = 1
+
+[profile.release]
+debug = 1
 
 [profile.dev.package."*"]
 opt-level = 3
@@ -13,16 +16,16 @@ opt-level = 3
 
 [dependencies]
 anyhow = "1"
-arrow-array = "49.0.0"
-arrow-schema = "49.0.0"
+arrow-array = "50"
+arrow-schema = "50"
 bevy = "0.12"
-bevy_common_assets = { version = "0.8", features = ["json"] }
+bevy_common_assets = { version = "0.9", features = ["json"] }
 # Uncomment once bevy-inspector-egui moves to bevy 0.11.0, https://github.com/jakobhellermann/bevy-inspector-egui/pull/141
 #bevy-inspector-egui = "0.18.3"
 bytes = "1.5"
 cfg-if = "1"
 log = "0.4"
-parquet = { version = "49.0.0", default-features = false, features = ["arrow", "arrow-schema", "arrow-array", "snap", "flate2", "brotli"] }
+parquet = { version = "50", default-features = false, features = ["arrow", "arrow-schema", "arrow-array", "snap", "flate2", "brotli"] }
 serde = { version = "1" }
 serde_json = { version = "1", optional = true }
 smooth-bevy-cameras = { version = "0.10" }
